# MindWeave

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements-dev.txt  requirements-openai.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/change_planning/: __init__.py  intent_models.py  intent_parser.py  node_resolver.py  patch_planner.py  proposal_explainer.py  validation_bridge.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/models/: api.py  artifacts.py  runtime.py
backend/app/runtime/: audit.py  budget.py  constraints.py  controller.py  scheduler.py
backend/app/services/: artifact_registry_service.py  convergence.py  document_processor.py  evaluation_service.py  experiment_service.py  financial_audit.py  generic_reasoning_operator.py  graph_patch_service.py  json_utils.py  knowledge_base.py  llm_gateway.py  node_cache.py  node_chat_service.py  ocr_service.py  optimization_service.py  program_synthesizer.py  registry.py  requirements_reference.py  review_service.py  runtime_metadata.py  schema_service.py  skill_service.py  (+5 more)
backend/mindweave_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: infra_smoke_test.py  pinecone_smoke_test.py  run_e2e.py
backend/tests/: test_determinism_and_audit_controls.py  test_evaluation_service.py  test_json_utils.py  test_nl_graph_planner.py  test_pinecone_vector_store.py  test_product_readiness.py  test_runtime_flow.py  test_spa_contract_to_cash.py  test_storage_and_ocr.py
(+50 files in other folders)
