[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindweave-backend"
version = "0.1.0"
description = "MindWeave MVP backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "jsonschema>=4.23.0,<5.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "pypdf>=4.3.1,<6.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "httpx>=0.27.2,<1.0.0",
  "pinecone>=8.1.0,<9.0.0",
  "supabase>=2.28.0,<3.0.0",
  "chunkr-ai>=0.3.7,<1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.60.0,<2.0.0"]
dev = ["pytest>=8.3.0,<9.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
